# libmpv-android

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/libmpv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/libmpv/: HomeScreen.kt  MainActivity.kt  Navigation.kt  PlayerScreen.kt  PlayerState.kt
app/src/main/java/com/example/libmpv/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/libmpv/: ExampleUnitTest.kt
buildscripts/: build.sh  download.sh
buildscripts/include/: depinfo.sh  download-deps.sh  download-sdk.sh
buildscripts/scripts/: ffmpeg.sh  libass.sh  libplacebo.sh  mpv-android.sh  mpv.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libmpv-android/: build.gradle.kts
libmpv-android/src/androidTest/java/fr/nextv/libmpv/: ExampleInstrumentedTest.kt
libmpv-android/src/main/cpp/: CMakeLists.txt  main.cpp  player.cpp
libmpv-android/src/main/java/fr/nextv/libmpv/: LibMpv.kt  MpvConfiguration.kt  MpvPlayer.kt  MpvPlayerJni.kt  NativeLib.kt  PlayerUtils.kt
libmpv-android/src/test/java/fr/nextv/libmpv/: ExampleUnitTest.kt
